# survec

./: README.md
src/: CMakeLists.txt
src/Survec/: CMakeLists.txt  ColorEditWidget.cpp  ColorEditWidget.h  ColorEditWidget.ui  CustomRectItem.cpp  CustomRectItem.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ROIConfigurationWidget.cpp  ROIConfigurationWidget.h  ROIConfigurationWidget.ui  Scene.cpp  Scene.h  Survec.rc  cwDisplayAlarmImg.cpp  cwDisplayAlarmImg.h  cwDisplayAlarmImg.ui  cwROIResult.cpp  cwROIResult.h  cwROIResult.ui  cwVideoPlayer.cpp  cwVideoPlayer.h  cwVideoPlayer.ui  cwView.cpp  cwView.h  main.cpp  resources.qrc
src/Survec/resources/icons/: ICONE.pptx  readme.txt
src/Survec/translations/: survec_fr.ts
src/SurvecAlarmPluginRS232/: AlarmPluginRS232.cpp  AlarmPluginRS232.h  CMakeLists.txt  SurvecAlarmPluginRS232_dll.h
src/SurvecLib/: Alarm.cpp  Alarm.h  AlarmPluginInterface.cpp  AlarmPluginInterface.h  AlarmPluginManager.cpp  AlarmPluginManager.h  CMakeLists.txt  ColorDetection.cpp  ColorDetection.h  ColorToDetect.cpp  ColorToDetect.h  DetectionType.cpp  DetectionType.h  FindTesseract.cmake  NumberDetection.cpp  NumberDetection.h  Process.cpp  Process.h  ROI.cpp  ROI.h  ROIVideoWriter.cpp  ROIVideoWriter.h  Session.cpp  Session.h  SymbolDetection.cpp  SymbolDetection.h  TextDetection.cpp  TextDetection.h  Thread.cpp  Thread.h  Tools.cpp  Tools.h  UndefinedDetection.cpp  UndefinedDetection.h  Version.h  VideoDevice.cpp  VideoDevice.h  VideoDeviceManager.cpp  VideoDeviceManager.h  XML.cpp  (+1 more)
src/setup/: genererSetup.bat  setup.nsi
